--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -242,6 +242,10 @@ a {
   color: var(--gray-color, #DDDDDD) !important;
 }
 
+.text-gray * {
+  color: var(--gray-color, #DDDDDD) !important;
+}
+
 .bg-secondary {
   background-color: var(--secondary-color, #009DEA) !important;
 }
@@ -264,6 +268,22 @@ a {
 
 .opacity-30 {
   opacity: 0.3;
+}
+
+.opacity-40 {
+  opacity: 0.4;
+}
+
+.opacity-50 {
+  opacity: 0.5;
+}
+
+.opacity-60 {
+  opacity: 0.6;
+}
+
+.opacity-70 {
+  opacity: 0.7;
 }
 
 .opacity-80 {
@@ -330,6 +350,26 @@ a {
   margin-top: 120px;
 }
 
+.my-1 {
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+}
+
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.my-3 {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .my-\[100px\] {
   margin-top: 100px;
   margin-bottom: 100px;
@@ -365,6 +405,38 @@ a {
 
 .p-5 {
   padding: 1.25rem;
+}
+
+.p-5 {
+  padding: 1.25rem;
+}
+
+.pl-4 {
+  padding-left: 1rem;
+}
+
+.pl-\[48px\] {
+  padding-left: 48px;
+}
+
+.pl-\[56px\] {
+  padding-left: 56px;
+}
+
+.pl-\[64px\] {
+  padding-left: 64px;
+}
+
+.pl-\[72px\] {
+  padding-left: 72px;
+}
+
+.pl-\[90px\] {
+  padding-left: 90px;
+}
+
+.pt-\[20px\] {
+  padding-top: 20px;
 }
 
 .pt-\[120px\] {
@@ -434,6 +506,18 @@ a {
   width: 50%;
 }
 
+.w-\[56px\] {
+  width: 56px;
+}
+
+.w-\[64px\] {
+  width: 64px;
+}
+
+.h-\[16px\] {
+  height: 16px;
+}
+
 .items-center {
   align-items: center;
 }
@@ -501,7 +585,7 @@ header {
 }
 
 .w-full {
-  width: 100%;
+  width: 100% !important;
 }
 
 .img-logo {
@@ -605,10 +689,6 @@ input[type="checkbox"] {
   }
 }
 
-h2 {
-  letter-spacing: 0.3em;
-}
-
 .subtitle {
   color: #49545D !important;
 }
@@ -619,6 +699,12 @@ h2 {
 
 .image-387 {
   max-height: 387px !important;
+  height: 100%;
+  width: 100% !important;
+}
+
+.image-599 {
+  max-width: 599px !important;
   height: 100%;
   width: 100% !important;
 }
@@ -639,8 +725,135 @@ h2 {
   letter-spacing: 0.1em;
 }
 
+.tracking-extra-widest {
+  letter-spacing: 0.2em;
+}
+
 .list-primary {
-  list-style-type: disc;
+  list-style-type: square;
   padding-left: 4px;
   margin-left: 0;
+}
+
+.list-inside {
+  list-style-position: inside;
+}
+
+.list-primary li::marker {
+  color: var(--primary-color, #64CEFF);
+}
+
+.slide-img {
+  min-height: 400px !important;
+  min-width: 250px !important;
+  width: 100% !important;
+}
+
+.slide-button {
+  width: 48px;
+  height: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 4px;
+  border: 1px solid var(--gray-color, #DDDDDD);
+  border-radius: 3px;
+  background: transparent;
+}
+
+.slide-button:hover {
+  border-color: var(--primary-color, #64CEFF);
+}
+
+.reverse-180 {
+  transform: rotateY(180deg);
+}
+
+.overflow-hidden {
+  overflow: hidden !important;
+}
+
+.overflow-x-auto {
+  overflow-x: auto !important;
+}
+
+.overflow-x-scroll {
+  overflow-x: scroll !important;
+}
+
+.bg-section2 {
+  background: url("../images/bg-img-section2.png") no-repeat left top;
+  object-fit: contain;
+  background-size: 208px;
+  padding-top: 24px;
+  max-height: 221px;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.w-fit {
+  min-width: 100%;
+  width: fit-content;
+}
+
+.top-0 {
+  top: 0;
+}
+
+.top-1 {
+  top: 0.25rem;
+}
+
+.top-2 {
+  top: 0.5rem;
+}
+
+.top-3 {
+  top: 0.75rem;
+}
+
+.top-4 {
+  top: 1rem;
+}
+
+.top-5 {
+  top: 1.25rem;
+}
+
+.left-0 {
+  left: 0;
+}
+
+.left-1 {
+  left: 0.25rem;
+}
+
+.left-2 {
+  left: 0.5rem;
+}
+
+.left-3 {
+  left: 0.75rem;
+}
+
+.left-4 {
+  left: 1rem;
+}
+
+.left-5 {
+  left: 1.25rem;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
 }
